FullQa New/src/objects/SmartTask__c.object
<CustomObject>
    <description>Avalara Workflow Task</description>
    <fields>
        <fullName>Account_Owner_Manager__c</fullName>
        <description>IBST-13797</description>
        <formula>$User.Id = RelatedToAccount__r.Owner.ManagerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IS Account Owner Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <formula>RelatedToAccount__r.Owner.FirstName &amp; &quot; &quot; &amp;  RelatedToAccount__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <formula>CaseRef__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accounting_Partner_Commission_Issue_Note__c</fullName>
        <label>Accounting Partner Commission Issue Note</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AccrualTrackingFee__c</fullName>
        <description>The Fee for the Accrual Tracking service for bills that Avalara processes</description>
        <inlineHelpText>The Fee for the Accrual Tracking service for bills that Avalara processes</inlineHelpText>
        <label>AccrualTrackingFee</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcctgAssigned__c</fullName>
        <label>AcctgAssigned</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AcctgCompleteDateTime__c</fullName>
        <label>AcctgCompleteDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AcctgSLA__c</fullName>
        <formula>AcctgCompleteDateTime__c - AcctgAssigned__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AcctgSLA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctgStamp__c</fullName>
        <label>AcctgStamp</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Acctg_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Acctg Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Action_Taken__c</fullName>
        <label>Action Taken</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ActivationFee__c</fullName>
        <description>Activation Fee for PPT Services</description>
        <inlineHelpText>Activation Fee for PPT Services</inlineHelpText>
        <label>Activation Fee</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AdditionalServices__c</fullName>
        <description>Additional Services that the client wants included in the PPT SOW</description>
        <inlineHelpText>Additional Services that the client wants included in the PPT SOW</inlineHelpText>
        <label>Additional Services</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accrual Tracking</fullName>
                </value>
                <value>
                    <fullName>Special Project Tax Estimate</fullName>
                </value>
                <value>
                    <fullName>Assistance with Audits</fullName>
                </value>
                <value>
                    <fullName>Assistance with Appeals</fullName>
                </value>
                <value>
                    <fullName>Other Assistance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AnnualReturnsPriceEstimate__c</fullName>
        <description>Estimate of the annual cost of the Returns Service on a PPT SOW.
(Total Per Return Fee * Number of Returns)</description>
        <formula>NumberOfReturns__c *  TotalPerReturnFee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Estimate of the annual cost of the Returns Service on a PPT SOW.
(Total Per Return Fee * Number of Returns)</inlineHelpText>
        <label>Annual Returns Price Estimate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual__c</fullName>
        <description>Estimate of the annual cost of the Avalara Bill Pay Service on a PPT SOW.
(Total Per Bill Fee * Number of Bills)</description>
        <formula>NumberOfBillsPaid__c *  TotalPerBillFee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Estimate of the annual cost of the Avalara Bill Pay Service on a PPT SOW.
(Total Per Bill Fee * Number of Bills)</inlineHelpText>
        <label>Annual Billing Price Estimate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AppealAssistanceNotes__c</fullName>
        <description>Notes related to the Appeals Assistance Service</description>
        <inlineHelpText>Notes related to the Appeals Assistance Service</inlineHelpText>
        <label>Appeal Assistance Notes</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ApprovalRequired__c</fullName>
        <formula>IF(Billing_Change_Proposed__c  &gt;= -200,&quot;No&quot;,IF( (ValueAfterChange__c / ValueNow__c) &gt;= 0.9,&quot;No&quot;,&quot;Yes&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ApprovalRequired</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApprovalStamp__c</fullName>
        <description>Stamped by approval workflow with Approver+DateTime when approved.</description>
        <label>ApprovalStamp</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApprovalStatus__c</fullName>
        <description>Status of Approval</description>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Required</fullName>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approval_Date__c</fullName>
        <description>Date field to use for reporting - stamped via approval process field update
Loyalty: Alison Cain/Clint Knudsen</description>
        <label>Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Area</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Owner__c</field>
                <operation>equals</operation>
                <valueField>Campaign.ParentId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>SmartTasks (Area)</relationshipLabel>
        <relationshipName>SmartTasks2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AuditAssistanceNotes__c</fullName>
        <description>Notes related to the Audit Assistance Service</description>
        <inlineHelpText>Notes related to the Audit Assistance Service</inlineHelpText>
        <label>Audit Assistance Notes</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Avoidable_Cancellation__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Avoidable Cancellation?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BillPayServiceFee__c</fullName>
        <description>The Service Fee for the Avalara Bill Pay Service</description>
        <inlineHelpText>The Service Fee for the Avalara Bill Pay Service</inlineHelpText>
        <label>Bill Pay Service Fee</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BillPayw_AllocationFee__c</fullName>
        <description>The fee for the Bill Pay with Allocation Service</description>
        <inlineHelpText>The fee for the Bill Pay with Allocation Service</inlineHelpText>
        <label>Bill Pay w/ Allocation Fee</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BillingAddress__c</fullName>
        <formula>RelatedToAccount__r.BillingStreet &amp; BR() &amp;
 RelatedToAccount__r.BillingCity &amp; &quot;, &quot; &amp;  RelatedToAccount__r.BillingState &amp; &quot; &quot; &amp;  RelatedToAccount__r.BillingPostalCode &amp; BR() &amp;
 RelatedToAccount__r.BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>The specific billing account associated with this transaction credit</inlineHelpText>
        <label>Billing Account</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Zuora__CustomerAccount__c.Zuora__Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.RelatedToAccount__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Zuora__CustomerAccount__c</referenceTo>
        <relationshipLabel>SmartTasks</relationshipLabel>
        <relationshipName>SmartTasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_Change_Proposed__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Value of Requested Billing Change</description>
        <inlineHelpText>Enter dollar value of proposed adjustment as a negative number. (Example: -250.00) For subscription adjustments, enter estimated value of the adjustment based on what Avalara could have collected for the same service/s without an adjustment.</inlineHelpText>
        <label>Billing Change Proposed</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Unit</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Campaign.Parent_Campaign_Name__c</field>
                <operation>equals</operation>
                <value>Voice of the Customer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>SmartTasks</relationshipLabel>
        <relationshipName>SmartTasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CAM_Assigned__c</fullName>
        <label>CAM Assigned</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CAM_Collection_Due_Date__c</fullName>
        <label>CAM Collection Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CAM_Collection_Item_Notes__c</fullName>
        <label>CAM Collection Item Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CAM_Collection_Item_Status__c</fullName>
        <label>CAM Collection Item Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Working</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CAM_Complete_DateTime__c</fullName>
        <label>CAM Complete DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CAM_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CAM Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CAM_Manager__c</fullName>
        <formula>CreatedBy.Manager.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CAM Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CAM_Stamp__c</fullName>
        <label>CAM Stamp</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CDM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SAM/PPM/RSM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SmartTasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Calc_Instructions_Sent__c</fullName>
        <label>Calc Instructions Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Cancel_Comments__c</fullName>
        <label>Cancel Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cancel_What__c</fullName>
        <label>Cancel What?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Calc</fullName>
                </value>
                <value>
                    <fullName>Returns</fullName>
                </value>
                <value>
                    <fullName>SST</fullName>
                </value>
                <value>
                    <fullName>Certs</fullName>
                </value>
                <value>
                    <fullName>ISPI - All</fullName>
                </value>
                <value>
                    <fullName>Support - Gold</fullName>
                </value>
                <value>
                    <fullName>Support - Premium</fullName>
                </value>
                <value>
                    <fullName>ISPI States</fullName>
                </value>
                <value>
                    <fullName>Tax Services</fullName>
                </value>
                <value>
                    <fullName>ISPI - Laserbridge</fullName>
                </value>
                <value>
                    <fullName>1099</fullName>
                </value>
                <value>
                    <fullName>Excise</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CaseRef__c</fullName>
        <description>Parent Case associated with the SmartTask</description>
        <label>Case Ref</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>SmartTasks</relationshipLabel>
        <relationshipName>AvaTasks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CaseSafeID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CaseSafeID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CertsCompleteDateTime__c</fullName>
        <label>CertsCompleteDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Certs_Assigned__c</fullName>
        <label>Certs Assigned</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Certs_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Certs Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Certs_Instructions_Sent__c</fullName>
        <label>Certs Instructions Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Certs_Stamp__c</fullName>
        <label>Certs Stamp</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collection_Amount__c</fullName>
        <label>Collection Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Collections_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Collections Item</label>
        <referenceTo>Collections_Item__c</referenceTo>
        <relationshipLabel>SmartTasks</relationshipLabel>
        <relationshipName>SmartTasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Concession_Reason__c</fullName>
        <description>Purpose: 
Loyalty/Accounting: Susan Gover/Sabrina</description>
        <inlineHelpText>You must select a reason when the adjustment is due to a Customer Concession.</inlineHelpText>
        <label>Concession Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Task_Reason__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Upgrade occurred before invoicing</fullName>
                </value>
                <value>
                    <fullName>Downgraded after renewal date</fullName>
                </value>
                <value>
                    <fullName>Conceding overages in lieu of upgrade</fullName>
                </value>
                <value>
                    <fullName>Connector Issues</fullName>
                </value>
                <value>
                    <fullName>Product Limitations/Configuration</fullName>
                </value>
                <value>
                    <fullName>Customer Expectations</fullName>
                </value>
                <value>
                    <fullName>Customer Service/Retention</fullName>
                </value>
                <value>
                    <fullName>Services SOW</fullName>
                </value>
                <value>
                    <fullName>Incorrect Billing</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Connector_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Connector Lookup</label>
        <referenceTo>Connector__c</referenceTo>
        <relationshipLabel>SmartTasks</relationshipLabel>
        <relationshipName>SmartTasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Connector__c</fullName>
        <label>Connector</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractDuration_Years__c</fullName>
        <description>The client&apos;s desired PPT Contract duration</description>
        <inlineHelpText>The client&apos;s desired PPT Contract duration</inlineHelpText>
        <label>Contract Duration (Years)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_Amendment__c</fullName>
        <description>Proposed changes to customer contract document(s)</description>
        <label>Contract Amendment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contract_s_to_Adjust__c</fullName>
        <description>Which Tensoft contracts need to be adjusted in conjunction with this SmartTask? Name changes to subscription to Adjust 4.2.15 to accommodate new record type</description>
        <inlineHelpText>Which Tensoft contracts need to be adjusted in conjunction with this SmartTask?</inlineHelpText>
        <label>Subscriptions to Adjust</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AvaTax (Calc)</fullName>
                </value>
                <value>
                    <fullName>Certs (Certs)</fullName>
                </value>
                <value>
                    <fullName>Returns (Avafile)</fullName>
                </value>
                <value>
                    <fullName>1099</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credit_Type__c</fullName>
        <description>Select type of transaction credit to be applied - either a known transaction amount (Credit Usage), a limit on usage during a specified time period (Set Usage Limit), or disable overages for the current contract term (Cap Usage at Plan Level Until Renewal)</description>
        <label>Transaction Credit Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Credit Usage</fullName>
                </value>
                <value>
                    <fullName>Set Temporary Usage Limit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Legal_Name__c</fullName>
        <description>Legal Name of Customer&apos;s Business (for inclusion in SOW)</description>
        <label>Customer Legal Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_SOW_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer SOW Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>SmartTasks</relationshipLabel>
        <relationshipName>SmartTasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DesiredServices__c</fullName>
        <description>The list of services the client wants to include in the PPT SOW</description>
        <inlineHelpText>The list of services the client wants to include in the PPT SOW</inlineHelpText>
        <label>Desired Services</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Signature Ready Returns</fullName>
                </value>
                <value>
                    <fullName>Signed Returns with (POA)</fullName>
                </value>
                <value>
                    <fullName>Avalara Bill Pay</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EffectiveDate__c</fullName>
        <description>The PPT SOW Contract Effective Date</description>
        <inlineHelpText>The PPT SOW Contract Effective Date</inlineHelpText>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Entity_Legal_Name__c</fullName>
        <description>Legal Name of Entity (if different)</description>
        <label>Entity Legal Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EstimatedNumberOfAssets__c</fullName>
        <description>An estimated number of Assets owned by a client&apos;s business</description>
        <inlineHelpText>An estimated number of Assets owned by a client&apos;s business</inlineHelpText>
        <label>Estimated Number Of Assets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FilingEnds__c</fullName>
        <label>Filing Ends</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Finance_Collections_Notes__c</fullName>
        <label>Finance Collections Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GoLiveAssigned__c</fullName>
        <label>GoLiveAssigned</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GoLiveCompleteDateTime__c</fullName>
        <label>GoLiveCompleteDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GoLive_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GoLive Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GoLive_Stamp__c</fullName>
        <label>GoLive Stamp</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hourly__c</fullName>
        <description>The agreed hourly rate for all Additional Services desired by the client (Billed by the Quarter Hour)</description>
        <inlineHelpText>The agreed hourly rate for all Additional Services desired by the client (Billed by the Quarter Hour)</inlineHelpText>
        <label>Additional Services Hourly Rate</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HowKeepYou__c</fullName>
        <description>How Could We Have Kept You?</description>
        <label>What Would Keep You?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Nothing</fullName>
                </value>
                <value>
                    <fullName>Better Product Experience</fullName>
                </value>
                <value>
                    <fullName>Better Support Experience</fullName>
                </value>
                <value>
                    <fullName>Better Compliance Experience</fullName>
                </value>
                <value>
                    <fullName>Better Account Management Experience</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ISPICompleteDateTime__c</fullName>
        <label>ISPICompleteDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ISPI_Assigned__c</fullName>
        <label>ISPI Assigned</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ISPI_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ISPI Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ISPI_Stamp__c</fullName>
        <label>ISPI Stamp</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Improvement_Area_1__c</fullName>
        <description>https://jira.avalara.com/browse/IBST-14496</description>
        <inlineHelpText>https://jira.avalara.com/browse/IBST-14496</inlineHelpText>
        <label>Improvement Area 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Improvement_Area_2__c</fullName>
        <description>https://jira.avalara.com/browse/IBST-14496</description>
        <inlineHelpText>https://jira.avalara.com/browse/IBST-14496</inlineHelpText>
        <label>Improvement Area 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Leasing/Owned Eqp at Cust Site</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invoice_not_Lookup__c</fullName>
        <label>Invoice - Not in Salesforce</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jurisdiction_Instructions__c</fullName>
        <label>Jurisdiction Instructions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Jurisdictions__c</fullName>
        <label>Jurisdictions</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All US state-level</fullName>
                </value>
                <value>
                    <fullName>Select US states (see comments)</fullName>
                </value>
                <value>
                    <fullName>Select US local (see comments)</fullName>
                </value>
                <value>
                    <fullName>Other (see comments)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Month_to_File__c</fullName>
        <label>Last Month to File</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Jan</fullName>
                </value>
                <value>
                    <fullName>Feb</fullName>
                </value>
                <value>
                    <fullName>Mar</fullName>
                </value>
                <value>
                    <fullName>Apr</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>Jun</fullName>
                </value>
                <value>
                    <fullName>Jul</fullName>
                </value>
                <value>
                    <fullName>Aug</fullName>
                </value>
                <value>
                    <fullName>Sep</fullName>
                </value>
                <value>
                    <fullName>Oct</fullName>
                </value>
                <value>
                    <fullName>Nov</fullName>
                </value>
                <value>
                    <fullName>Dec</fullName>
                </value>
                <value>
                    <fullName>Special - See comments</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Leasing_OwnedEqpDescription__c</fullName>
        <description>A description of the Leasing/Owned Equipment the client keeps on customer property</description>
        <inlineHelpText>A description of the Leasing/Owned Equipment the client keeps on customer property</inlineHelpText>
        <label>Leasing/Owned Eqp Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Length__c</fullName>
        <formula>len(TensoftChangePeek__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MSA_Signed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MSA Signed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manager_Email_Lookup__c</fullName>
        <formula>CreatedBy.Manager.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manager Email Lookup</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_Email__c</fullName>
        <label>Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Months_Added__c</fullName>
        <description>Purpose: to track smart task adjustments and report on the number of months added. 
Integrated: NO
Loyalty: susan gover</description>
        <label># Months Added</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>